@@ -11,10 +11,8 @@
 
 #ifdef WIN32
 	#include "libusbwinusbbridge.h"
-	#define __le16_to_cpu(x) (x)
 #else
 	#include <usb.h>
-	#include <asm/byteorder.h>
 #endif
 
 #define VolcraftCO20_VENDOR    0x03eb
@@ -93,6 +91,16 @@ void CVolcraftCO20Tool::CloseDevice()
 	m_device_handle=NULL;
 }
 
+int is_big_endian(void)
+{
+	union {
+		uint32_t i;
+		char c[4];
+	} bint = {0x01020304};
+
+	return bint.c[0] == 1; 
+}
+
 unsigned short CVolcraftCO20Tool::GetVOC()
 {
 	if (m_device_handle==NULL)
@@ -124,7 +132,11 @@ unsigned short CVolcraftCO20Tool::GetVOC()
 
 	unsigned short iresult=0;
 	memcpy(&iresult,buf+2,2);
-	unsigned short voc = __le16_to_cpu(iresult);
+	unsigned short voc = iresult;
+	if (is_big_endian())
+	{
+		voc=((voc&0xFF)<<8)|((voc&0xFF00)>>8);
+	}
 	if ((voc<400)||(voc>2000))
 		return 3000;
 	return voc;
