@@ -45,6 +45,7 @@
 				<thead>
 						<tr valign="middle">
 								<th width="60"><img src="images/switch.png" title="Invert selection" onclick="InvertCheck()"/>&nbsp;<img src="images/delete.png" title="Delete selected device(s)" onclick="DeleteMultipleDevices()"/></th>	
+								<th width="30" align="left">Idx</th>
 								<th width="100" align="left">Hardware</th>
 								<th width="70" align="left">ID</th>
 								<th width="40" align="left">Unit</th>
@@ -54,8 +55,8 @@
 								<th>Data</th>
 								<th width="30"><img src="images/air_signal.png" title="RF Signal Level"></img></th>
 								<th width="30"><img src="images/battery.png" title="Battery Level"></img></th>
-								<th width="50"></th>
-								<th width="140" align="left">Last Seen</th>
+								<th width="60"></th>
+								<th width="160" align="left">Last Seen</th>
 						</tr>
 				</thead>
 		</table>
@@ -198,9 +199,9 @@ function ShowDevices(filter)
 			"sRowSelect": "single"
 		},
 		"aoColumnDefs": [
-			{ "bSortable": false, "aTargets": [ 0,10 ] }
+			{ "bSortable": false, "aTargets": [ 0,11 ] }
 		],
-		"aaSorting": [[ 11, "desc" ]],
+		"aaSorting": [[ 12, "desc" ]],
 		"bSortClasses": false,
 		"bProcessing": true,
 		"bStateSave": true,
@@ -308,7 +309,8 @@ function ShowDevices(filter)
 						BatteryLevel="Low";
           }
           var addId = oTable.fnAddData([
-											itemChecker + "&nbsp;&nbsp;" + itemImage,
+					  itemChecker + "&nbsp;&nbsp;" + itemImage,
+					  item.idx,
                       item.HardwareName,
                       ID,
                       item.Unit,
