@@ -21,6 +21,8 @@ Version 1.0.xxx (May xxth 2013)
 - Changed: Web users not loaded when no Application Settings admin account is specified
 - Fixed: Voltcraft C020 value reading corrected for little endian systems
 - Changed: Reorganized main menu
+- Implemented: Devices Overview, added device Idx
+- Changed: generic little endian detection algorithm
 
 Version 1.0.607 (May 11th 2013)
 - Changed: Rego6XX Type setting moved to the hardware settings in the same way as RFXtrx setup is done
